--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
   <section id="home">
     <div class="cover-image">
-      <img src="./icon.jpg" alt="Cover Image">
+      <img src="./images/icon.jpg" alt="Cover Image">
     </div>
     <div class="project-info">
       <h3>ELY - Resale Realm</h3>
@@ -44,14 +44,14 @@
   <h2>Features</h2>
   <section id="features">
     <div class="feature">
-      <img src="./buySell.jpg" alt="Feature 1">
+      <img src="./images/buySell.jpg" alt="Feature 1">
       <div class="feature-content">
         <h2>Easy Buying and Selling</h2>
         <p>With ELY, you can effortlessly buy and sell used items in just a few clicks. Say goodbye to the hassle of traditional classifieds.</p>
       </div>
     </div>
     <div class="feature">
-      <img src="./secure.jpg" alt="Feature 2">
+      <img src="./images/secure.jpg" alt="Feature 2">
       <div class="feature-content">
         <h2>Secure Transactions</h2>
         <p>Your transactions on ELY are fully secure. We prioritize the safety and privacy of our users to provide a worry-free selling and buying experience.</p>
@@ -68,7 +68,7 @@
                     <tr>
                 <td class="tdata" id="tdata1">
                     <figure class="fig">
-                        <img src="./Me.png" alt="profile" class="yos"  width="250cm" height="250cm">
+                        <img src="./images/Me.png" alt="profile" class="yos"  width="250cm" height="250cm">
                         <figcaption class="caption"> 
                             <div class="captiontxt">
                                 <h3>Yoseph Zewdu</h3>
