--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <div class="project-info">
       <h3>ELY - Resale Realm</h3>
       <p>A Resale Platform for Buying and Selling Used Items</p>
-      <a class="button" href="https://your-deployed-app-url.com">Try ELY</a>
+      <a class="button" href="#">Try ELY</a>
     </div>
   </section>
 <div class="feature-container">
