--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html>
 <head>
   <title>ELY - Resale Platform</title>
@@ -151,3 +151,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+ -->
