--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
-<!-- <!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
   <title>ELY - Resale Platform</title>
   <link rel="stylesheet" type="text/css" href="styles.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css">
-  <!-- <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600" rel="stylesheet"> -->
+  <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600" rel="stylesheet">
   <link href="./index.css" rel="stylesheet">
   <link href="./contact.css" rel="stylesheet">
   <link href="./home.css" rel="stylesheet">
@@ -18,7 +18,7 @@
     <nav class="nav">
       <ul>
         <li>
-          <!-- <img class="logo" src="./icon.jpg" alt="Logo"> -->
+          <img class="logo" src="./icon.jpg" alt="Logo">
           <p class="ely">ELY</p>
         </li>
         <li><a href="#home">Home</a></li>
@@ -151,4 +151,4 @@
   <script src="script.js"></script>
 </body>
 </html>
- -->
+
