--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <nav class="nav">
       <ul>
         <li>
-          <img class="logo" src="./icon.jpg" alt="Logo">
+         <!-- <img class="logo" src="./icon.jpg" alt="Logo"> -->
           <p class="ely">ELY</p>
         </li>
         <li><a href="#home">Home</a></li>
