--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                         </div>
                         </figcaption>
                         <div class="social" id="social">
-                        <a href="https://github.com/"><i class="fab fa-github" style='font-size:30px'></i></a>
+                        <a href="https://github.com/esru13"><i class="fab fa-github" style='font-size:30px'></i></a>
                         <a href="https://www.linkedin.com/in/esrael-berhanu-360ba6248/"><i class="fab fa-linkedin"></i></a>
                         <a href="#"><i class="fab fa-facebook"></i></a>
                         <a href="https://twitter.com/"><i class="fab fa-twitter"></i></a>
