--- a/index.html
+++ b/index.html
@@ -135,10 +135,10 @@
   <section id="contact">
     <div class="contact-form">
       <h2>Contact Us</h2>
-      <form>
-        <input type="text" name="name" placeholder="Your Name">
-        <input type="email" name="email" placeholder="Your Email">
-        <textarea name="message" placeholder="Your Message"></textarea>
+      <form method="POST" action="contact.php">
+        <input type="text" name="name" placeholder="Your Name" required>
+        <input type="email" name="email" placeholder="Your Email" required>
+        <textarea name="message" placeholder="Your Message" required></textarea>
         <input class="button" type="submit" value="Send Message">
       </form>
     </div>
