--- a/index.html
+++ b/index.html
@@ -9,7 +9,12 @@
   <link href="./index.css" rel="stylesheet">
   <link href="./contact.css" rel="stylesheet">
   <link href="./home.css" rel="stylesheet">
-</head>
+<script>
+  function msg() {
+    alert("oops, under construction. Will be deployed soon.");
+  }
+  </script>
+  </head>
 <body>
   <header>
     <nav class="nav">
@@ -33,7 +38,7 @@
     <div class="project-info">
       <h3>ELY - Resale Realm</h3>
       <p>A Resale Platform for Buying and Selling Used Items</p>
-      <a class="button" href="#">Try ELY</a>
+      <a class="button" href="#" onClick="msg()">Try ELY</a>
     </div>
   </section>
 <div class="feature-container">
