--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <div class="project-info">
       <h3>ELY - Resale Realm</h3>
       <p>A Resale Platform for Buying and Selling Used Items</p>
-      <a class="button" href="#" onClick="msg()">Try ELY</a>
+      <button class="button"  onClick="msg()">Try ELY</button>
     </div>
   </section>
 <div class="feature-container">
