--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
   function msg() {
     alert("oops, under construction. Will be deployed soon.");
   }
+  
+  function con() {
+    alert("Thank you for your time. \n Unfortunately the mailing service isn't applied yet. Come back later");
+  }
   </script>
   </head>
 <body>
@@ -141,7 +145,7 @@
         <input type="text" name="name" placeholder="Your Name" required>
         <input type="email" name="email" placeholder="Your Email" required>
         <textarea name="message" placeholder="Your Message" required></textarea>
-        <input class="button" type="submit" value="Send Message">
+        <input class="button" type="submit" value="Send Message" onClick="con()">
       </form>
     </div>
   </section>
