--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
   <section id="contact">
     <div class="contact-form">
       <h2>Contact Us</h2>
-      <form method="POST" action="contact.php">
+      <form method="POST" action="contact">
         <input type="text" name="name" placeholder="Your Name" required>
         <input type="email" name="email" placeholder="Your Email" required>
         <textarea name="message" placeholder="Your Message" required></textarea>
