--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
         <input type="text" name="name" placeholder="Your Name" required>
         <input type="email" name="email" placeholder="Your Email" required>
         <textarea name="message" placeholder="Your Message" required></textarea>
-        <input class="button" type="submit" value="Send Message" onClick="con()">
+        <button class="button"  onClick="con()">Send</button>
       </form>
     </div>
   </section>
