--- a/index.html
+++ b/index.html
@@ -141,11 +141,12 @@
   <section id="contact">
     <div class="contact-form">
       <h2>Contact Us</h2>
-      <form method="POST" >
+      <form>
         <input type="text" name="name" placeholder="Your Name" required>
         <input type="email" name="email" placeholder="Your Email" required>
         <textarea name="message" placeholder="Your Message" required></textarea>
         <button class="button"  onClick="con()">Send</button>
+        
       </form>
     </div>
   </section>
