--- a/index.html
+++ b/index.html
@@ -62,11 +62,29 @@
         <p>Your transactions on ELY are fully secure. We prioritize the safety and privacy of our users to provide a worry-free selling and buying experience.</p>
       </div>
     </div>
+    <div class="feature">
+      <img class="image" src="./images/fee.jpg" alt="Feature 2">
+      <div class="feature-content">
+        <h2>No service charge</h2>
+        <p>ELY eliminates any fees or commissions typically associated with transactions on the platform. <br>It ensures that sellers can maximize their profits by receiving the full amount from their item sales without any deductions.</p>
+      </div>
+    </div>
   </section>
 </div>
+<div class="feature-container" id="about">
+  <h2>About</h2>
+  </div>
 <div class="about-us">
-<h2 class="team">Team</h2>
-<section id="about">
+<section>
+   <p>
+    <br><br>
+    📌 Our project,was inspired by the growing need for a platform that facilitates the buying and selling of used/secondhand products with fair prices. <br>The idea behind Resale originated from observing the increasing popularity of the secondhand market and recognizing the potential to create a user-friendly online platform to connect buyers and sellers.
+    <br> 📌 The rise of e-commerce and online marketplaces has made it easier for people to sell and buy products remotely. However, existing platforms often lack dedicated features for secondhand items, making it challenging to find relevant listings and negotiate fair prices. This lack of specialized focus sparked the idea of creating a dedicated resale web app that addresses these specific needs.
+    <br>📌 By focusing solely on resale, we aim to create a curated marketplace that promotes transparency, trust, and fair pricing. 
+
+  </p>
+  <br>
+  <h3>💻 Teams  </h3>
   <div class="main">
             <div class="second">
                 <table class = "sertabel1">
