--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       </ul>
     </nav>
   </header>
-  <div class="feature-container" id="about">
+  <div class="feature-container" id="home">
     <h2>Intro</h2>
     </div>
   <section id="home">
