--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </li>
         <li><a href="#home">Home</a></li>
         <li><a href="#about">About</a></li>
-        <li><a href="#features">Features</a></li>
+        <li><a href="#feature">Features</a></li>
         <li><a href="#contact">Contact</a></li>
         <li><a href="https://github.com/Yosinan/Resale_Realm">Project's Github Link</a></li>
       </ul>
@@ -48,7 +48,7 @@
       <button class="button" href="#" onclick="msg()">Try ELY</button>
     </div>
   </section>
-<div class="feature-container">
+<div class="feature-container" id="feature">
   <h2>Features</h2>
   <section id="features">
     <div class="feature">
