--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
    <p>
     <br><br>
     📌 Our project,was inspired by the growing need for a platform that facilitates the buying and selling of used/secondhand products with fair prices. <br>The idea behind Resale originated from observing the increasing popularity of the secondhand market and recognizing the potential to create a user-friendly online platform to connect buyers and sellers.
-    <br> 📌 The rise of e-commerce and online marketplaces has made it easier for people to sell and buy products remotely. However, existing platforms often lack dedicated features for secondhand items, making it challenging to find relevant listings and negotiate fair prices. This lack of specialized focus sparked the idea of creating a dedicated resale web app that addresses these specific needs.
-    <br>📌 By focusing solely on resale, we aim to create a curated marketplace that promotes transparency, trust, and fair pricing. 
+    <br> 📌 The rise of e-commerce and online marketplaces has made it easier for people to sell and buy products remotely. However, existing platforms often lack dedicated features for secondhand items, making it challenging to find relevant listings and negotiate fair prices. 📌  This lack of specialized focus sparked the idea of creating a dedicated resale web app that addresses these specific needs.
+    <br> By focusing solely on resale, we aim to create a curated marketplace that promotes transparency, trust, and fair pricing. 
 
   </p>
   <br>
