--- a/index.html
+++ b/index.html
@@ -163,6 +163,14 @@
             </div>
   </section>
 </div>
+<div class="video-container">
+  <video controls>
+    <source src="./portfolio.mp4" type="video/mp4">
+    
+    <!-- Add additional source elements for different video formats if needed -->
+    Your browser does not support the video tag.
+  </video>
+</div>
 <div class="contact-container">
   <section id="contact">
     <div class="contact-form">
