--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <script>
     
     function redirectToLogin() {
- window.location.href = "http://localhost:3000/register"; 
+ window.location.href = "http://localhost:3000/login"; 
 }
     function msg() {
       alert("oops, under construction. Will be deployed soon.");
