--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                     <tr>
                 <td class="tdata" id="tdata1">
                     <figure class="fig">
-                        <img src="./images/Me.png" alt="profile" class="yos"  width="250cm" height="250cm">
+                        <img src="./images/e-Me.png" alt="profile" class="yos"  width="250cm" height="250cm">
                         <figcaption class="caption"> 
                             <div class="captiontxt">
                                 <h3>Yoseph Zewdu</h3>
